--- a/index.html
+++ b/index.html
@@ -1,207 +1,163 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SmartK TV</title>
 
 <style>
-
-/* Loading Screen */
-#loader{
-position:fixed;
-width:100%;
-height:100%;
-background:black;
-color:yellow;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:40px;
-z-index:999;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(-45deg, red, blue, purple);
+  background-size: 400% 400%;
+  animation: bgMove 12s infinite alternate;
+  color: white;
+}
+@keyframes bgMove {
+  from { background-position: left; }
+  to { background-position: right; }
 }
 
-/* Animated background */
-body{
-margin:0;
-font-family:Arial;
-color:white;
-background:linear-gradient(-45deg, red, blue, purple);
-background-size:400% 400%;
-animation:bgMove 10s infinite alternate;
+/* Logo */
+header { text-align: center; padding: 20px; }
+.logo {
+  font-size: 60px;
+  color: yellow;
+  font-weight: bold;
+  text-shadow: 3px 3px red, 6px 6px blue, 9px 9px purple;
+  animation: float 3s infinite ease-in-out;
 }
-
-@keyframes bgMove{
-from{background-position:left;}
-to{background-position:right;}
-}
-
-/* Header */
-header{
-text-align:center;
-padding:20px;
-}
-
-.logo{
-font-size:55px;
-color:yellow;
-font-weight:bold;
-text-shadow:
-3px 3px 0 red,
-6px 6px 0 blue,
-9px 9px 0 purple;
+@keyframes float {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
+  100% { transform: translateY(0); }
 }
 
 /* Navigation */
-nav{
-background:yellow;
-padding:10px;
-text-align:center;
+nav {
+  background: yellow;
+  padding: 10px;
+  text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
-
-nav button{
-margin:5px;
-padding:10px 15px;
-border:none;
-background:black;
-color:yellow;
-font-weight:bold;
-cursor:pointer;
-box-shadow:0 0 10px yellow;
-}
-
-/* Slideshow */
-.banner{
-width:100%;
-height:180px;
-overflow:hidden;
-}
-
-.slide{
-display:none;
-font-size:40px;
-padding:60px;
+nav button {
+  margin: 5px;
+  padding: 8px 12px;
+  border: none;
+  background: black;
+  color: yellow;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 0 8px yellow;
 }
 
 /* Search */
-#search{
-width:80%;
-padding:10px;
-margin:15px;
-border-radius:8px;
-border:none;
+#search {
+  width: 90%;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 6px;
+  border: none;
+  font-size: 16px;
 }
 
 /* Grid */
-.grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:20px;
-padding:20px;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 15px;
+  padding: 15px;
 }
 
-.card{
-background:black;
-border:3px solid yellow;
-border-radius:12px;
-padding:10px;
-transition:.3s;
+/* Cards */
+.card {
+  background: black;
+  border: 2px solid yellow;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px yellow;
+}
+.card img { width: 100%; }
+.card .title {
+  padding: 8px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
 }
 
-.card:hover{
-transform:scale(1.05);
+/* Player overlay */
+#playerOverlay {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.9);
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
+}
+#playerOverlay iframe {
+  width: 80%; height: 60%;
+}
+#closePlayer {
+  position: absolute;
+  top: 20px; right: 30px;
+  font-size: 30px; color: white;
+  cursor: pointer;
 }
 
-iframe{
-width:100%;
-height:200px;
-border:none;
+/* Back to top */
+#topBtn {
+  position: fixed;
+  bottom: 20px; right: 20px;
+  padding: 10px 15px;
+  background: yellow; color: black;
+  border: none; border-radius: 6px;
+  cursor: pointer; display: none;
+  font-weight: bold; box-shadow: 0 0 8px yellow;
 }
 
 /* Footer */
-footer{
-background:black;
-color:yellow;
-padding:10px;
-text-align:center;
+footer {
+  background: black;
+  color: yellow;
+  text-align: center;
+  padding: 12px;
+  margin-top: 20px;
 }
-
-/* Dark mode */
-.dark{
-background:black !important;
-}
-
 </style>
 </head>
-
 <body>
 
-<div id="loader">Loading SmartK TV...</div>
-
-<header>
-<div class="logo">SmartK TV</div>
-</header>
+<header><div class="logo">SmartK TV</div></header>
 
 <nav>
-<button onclick="toggleMode()">Dark/Light</button>
+  <button onclick="filterCategory('All')">All</button>
+  <button onclick="filterCategory('Movies')">Movies</button>
+  <button onclick="filterCategory('Music')">Music</button>
+  <button onclick="filterCategory('Instrumental')">Instrumental</button>
+  <button onclick="filterCategory('News')">News</button>
+  <button onclick="filterCategory('History')">History/Wars</button>
 </nav>
 
-<div class="banner">
-<div class="slide">Welcome to SmartK TV</div>
-<div class="slide">Free Worldwide Entertainment</div>
-<div class="slide">Enjoy Watching!</div>
+<input id="search" placeholder="Search videos..." onkeyup="searchVideos()">
+
+<div class="grid" id="videoGrid"></div>
+
+<button id="topBtn" onclick="scrollToTop()">Top</button>
+
+<footer>Created by Akin S. Sokpah</footer>
+
+<div id="playerOverlay">
+  <div id="closePlayer" onclick="closePlayer()">✕</div>
+  <iframe id="playerFrame" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
-
-<input id="search" placeholder="Search videos..." onkeyup="filterVideos()">
-
-<div class="grid" id="videoGrid">
-
-<div class="card"><iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe></div>
-<div class="card"><iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe></div>
-<div class="card"><iframe src="https://www.youtube.com/embed/9bZkp7q19f0"></iframe></div>
-<div class="card"><iframe src="https://www.youtube.com/embed/kXYiU_JCYtU"></iframe></div>
-
-</div>
-
-<footer>
-Created by Akin S. Sokpah
-</footer>
-
-<script>
-
-/* Loader */
-window.onload = function(){
-document.getElementById("loader").style.display="none";
-startSlides();
-};
-
-/* Slideshow */
-let index=0;
-function startSlides(){
-let slides=document.getElementsByClassName("slide");
-for(let i=0;i<slides.length;i++) slides[i].style.display="none";
-index++;
-if(index>slides.length) index=1;
-slides[index-1].style.display="block";
-setTimeout(startSlides,2500);
-}
-
-/* Dark mode toggle */
-function toggleMode(){
-document.body.classList.toggle("dark");
-}
-
-/* Search filter */
-function filterVideos(){
-let input=document.getElementById("search").value.toLowerCase();
-let cards=document.getElementsByClassName("card");
-for(let i=0;i<cards.length;i++){
-cards[i].style.display=cards[i].innerText.toLowerCase().includes(input)
-? ""
-: "none";
-}
-}
-
-</script>
-
-</body>
-</html>
