--- a/index.html
+++ b/index.html
@@ -1,163 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>SmartK TV</title>
 
-<style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(-45deg, red, blue, purple);
-  background-size: 400% 400%;
-  animation: bgMove 12s infinite alternate;
-  color: white;
-}
-@keyframes bgMove {
-  from { background-position: left; }
-  to { background-position: right; }
-}
+<link rel="stylesheet" href="style.css">
 
-/* Logo */
-header { text-align: center; padding: 20px; }
-.logo {
-  font-size: 60px;
-  color: yellow;
-  font-weight: bold;
-  text-shadow: 3px 3px red, 6px 6px blue, 9px 9px purple;
-  animation: float 3s infinite ease-in-out;
-}
-@keyframes float {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-  100% { transform: translateY(0); }
-}
-
-/* Navigation */
-nav {
-  background: yellow;
-  padding: 10px;
-  text-align: center;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
-nav button {
-  margin: 5px;
-  padding: 8px 12px;
-  border: none;
-  background: black;
-  color: yellow;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 0 8px yellow;
-}
-
-/* Search */
-#search {
-  width: 90%;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 6px;
-  border: none;
-  font-size: 16px;
-}
-
-/* Grid */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
-  padding: 15px;
-}
-
-/* Cards */
-.card {
-  background: black;
-  border: 2px solid yellow;
-  border-radius: 10px;
-  overflow: hidden;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 15px yellow;
-}
-.card img { width: 100%; }
-.card .title {
-  padding: 8px;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  color: white;
-}
-
-/* Player overlay */
-#playerOverlay {
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.9);
-  justify-content: center;
-  align-items: center;
-  z-index: 200;
-}
-#playerOverlay iframe {
-  width: 80%; height: 60%;
-}
-#closePlayer {
-  position: absolute;
-  top: 20px; right: 30px;
-  font-size: 30px; color: white;
-  cursor: pointer;
-}
-
-/* Back to top */
-#topBtn {
-  position: fixed;
-  bottom: 20px; right: 20px;
-  padding: 10px 15px;
-  background: yellow; color: black;
-  border: none; border-radius: 6px;
-  cursor: pointer; display: none;
-  font-weight: bold; box-shadow: 0 0 8px yellow;
-}
-
-/* Footer */
-footer {
-  background: black;
-  color: yellow;
-  text-align: center;
-  padding: 12px;
-  margin-top: 20px;
-}
-</style>
 </head>
+
 <body>
 
-<header><div class="logo">SmartK TV</div></header>
+<!-- 3D Logo -->
+<canvas id="logoCanvas"></canvas>
 
-<nav>
-  <button onclick="filterCategory('All')">All</button>
-  <button onclick="filterCategory('Movies')">Movies</button>
-  <button onclick="filterCategory('Music')">Music</button>
-  <button onclick="filterCategory('Instrumental')">Instrumental</button>
-  <button onclick="filterCategory('News')">News</button>
-  <button onclick="filterCategory('History')">History/Wars</button>
-</nav>
+<h1>SmartK TV</h1>
+<p>Created by Akin S. Sokpah</p>
 
-<input id="search" placeholder="Search videos..." onkeyup="searchVideos()">
+<!-- Search -->
+<input id="search" placeholder="Search..." onkeyup="searchVideos()">
 
-<div class="grid" id="videoGrid"></div>
-
-<button id="topBtn" onclick="scrollToTop()">Top</button>
-
-<footer>Created by Akin S. Sokpah</footer>
-
-<div id="playerOverlay">
-  <div id="closePlayer" onclick="closePlayer()">✕</div>
-  <iframe id="playerFrame" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<!-- Category Filters -->
+<div class="buttons">
+<button onclick="filterCategory('All')">All</button>
+<button onclick="filterCategory('Movies')">Movies</button>
+<button onclick="filterCategory('Music')">Music</button>
+<button onclick="filterCategory('Instrumental')">Instrumental</button>
+<button onclick="filterCategory('News')">News</button>
+<button onclick="filterCategory('History')">History</button>
 </div>
+
+<!-- Grid -->
+<div id="videoGrid"></div>
+
+<!-- Player -->
+<div id="playerOverlay">
+  <div class="playerBox">
+      <button onclick="closePlayer()">Close</button>
+      <iframe id="playerFrame" allowfullscreen></iframe>
+  </div>
+</div>
+
+<!-- Back To Top -->
+<button id="topBtn" onclick="scrollToTop()">⬆</button>
+
+<!-- Scripts -->
+<script src="logo.js"></script>
+<script src="storage.js"></script>
+<script src="api.js"></script>
+<script src="player.js"></script>
+<script src="script.js"></script>
+
+</body>
+</html>
