--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>SmartK TV</title>
-
 <link rel="stylesheet" href="style.css">
-
 </head>
-
 <body>
 
 <!-- 3D Logo -->
@@ -22,20 +17,28 @@
 <!-- Search -->
 <input id="search" placeholder="Search..." onkeyup="searchVideos()">
 
+<!-- Theme Toggle -->
+<button onclick="toggleTheme()">🌙 Toggle Theme</button>
+
 <!-- Category Filters -->
 <div class="buttons">
-<button onclick="filterCategory('All')">All</button>
-<button onclick="filterCategory('Movies')">Movies</button>
-<button onclick="filterCategory('Music')">Music</button>
-<button onclick="filterCategory('Instrumental')">Instrumental</button>
-<button onclick="filterCategory('News')">News</button>
-<button onclick="filterCategory('History')">History</button>
+  <button onclick="filterCategory('All')">All</button>
+  <button onclick="filterCategory('Movies')">Movies</button>
+  <button onclick="filterCategory('Music')">Music</button>
+  <button onclick="filterCategory('Instrumental')">Instrumental</button>
+  <button onclick="filterCategory('News')">News</button>
+  <button onclick="filterCategory('History')">History</button>
 </div>
 
-<!-- Grid -->
+<!-- Upload form is added dynamically by upload.js -->
+
+<!-- Trending Slider -->
+<div id="trendingSlider"></div>
+
+<!-- Video Grid -->
 <div id="videoGrid"></div>
 
-<!-- Player -->
+<!-- Player Overlay -->
 <div id="playerOverlay">
   <div class="playerBox">
       <button onclick="closePlayer()">Close</button>
@@ -47,11 +50,14 @@
 <button id="topBtn" onclick="scrollToTop()">⬆</button>
 
 <!-- Scripts -->
+<script type="module" src="firebase.js"></script>
 <script src="logo.js"></script>
 <script src="storage.js"></script>
-<script src="api.js"></script>
+<script type="module" src="upload.js"></script>
+<script type="module" src="slider.js"></script>
 <script src="player.js"></script>
 <script src="script.js"></script>
+<script src="theme.js"></script>
 
 </body>
 </html>
